--- a/package.json
+++ b/package.json
@@ -22,24 +22,23 @@
     "start": "gulp"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/common": "^2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
     "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
     "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.4",
     "babel-preset-angular2": "0.0.2",
     "babel-preset-es2015": "^6.9.0",
     "core-js": "^2.4.0",
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.11",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^4.1.0",
-    "gulp-ext-replace": "^0.3.0",
+    "gulp-less": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
     "reflect-metadata": "^0.1.3",
     "run-sequence": "^1.2.2",
     "rxjs": "5.0.0-beta.6",
