--- a/package.json
+++ b/package.json
@@ -22,27 +22,30 @@
     "start": "gulp"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "babel-preset-angular2": "0.0.2",
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-angular2": "^0.0.2",
     "babel-preset-es2015": "^6.14.0",
     "core-js": "^2.4.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.12",
-    "gulp-concat": "^2.6.0",
     "gulp-connect": "^4.2.0",
-    "gulp-less": "^3.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.4",
     "reflect-metadata": "^0.1.8",
     "run-sequence": "^1.2.2",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.17"
+    "rxjs": "5.0.0-beta.12",
+    "webpack": "^1.13.2",
+    "webpack-stream": "^3.2.0",
+    "zone.js": "^0.6.25"
   }
 }
