--- a/package.json
+++ b/package.json
@@ -19,33 +19,38 @@
         "babel"
     ],
     "scripts": {
-        "start": "gulp"
+        "start": "gulp --dev",
+        "prod": "gulp",
+        "dist": "gulp clean && gulp build"
+    },
+    "dependencies": {
+        "@angular/common": "^2.2.4",
+        "@angular/compiler": "^2.2.4",
+        "@angular/core": "^2.2.4",
+        "@angular/http": "^2.2.4",
+        "@angular/platform-browser": "^2.2.4",
+        "@angular/platform-browser-dynamic": "^2.2.4",
+        "@angular/router": "^3.2.4",
+        "core-js": "^2.4.1",
+        "reflect-metadata": "^0.1.8",
+        "rxjs": "5.0.0-beta.12",
+        "zone.js": "^0.6.26"
     },
     "devDependencies": {
-        "@angular/common": "^2.1.0",
-        "@angular/compiler": "^2.1.0",
-        "@angular/core": "^2.1.0",
-        "@angular/http": "^2.1.0",
-        "@angular/platform-browser": "^2.1.0",
-        "@angular/platform-browser-dynamic": "^2.1.0",
-        "@angular/router": "^3.1.0",
-        "babel-core": "^6.17.0",
-        "babel-loader": "^6.2.5",
+        "babel-core": "^6.18.2",
+        "babel-loader": "^6.2.8",
         "babel-preset-angular2": "^0.0.2",
-        "babel-preset-es2015": "^6.14.0",
-        "core-js": "^2.4.1",
+        "babel-preset-es2015": "^6.18.0",
         "del": "^2.2.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^3.1.1",
-        "gulp-clean-css": "^2.0.12",
-        "gulp-connect": "^4.2.0",
+        "gulp-clean-css": "^2.0.13",
+        "gulp-connect": "^5.0.0",
         "gulp-sass": "^2.3.2",
-        "gulp-sourcemaps": "^1.6.0",
-        "reflect-metadata": "^0.1.8",
+        "gulp-sourcemaps": "^1.9.1",
+        "open": "^0.0.5",
         "run-sequence": "^1.2.2",
-        "rxjs": "5.0.0-beta.12",
-        "webpack": "^1.13.2",
-        "webpack-stream": "^3.2.0",
-        "zone.js": "^0.6.25"
+        "webpack": "^1.13.3",
+        "webpack-stream": "^3.2.0"
     }
 }
