:bug: add comma in package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "keywords": [
         "angular",
         "angular2",
-        "angular4"
+        "angular4",
         "es6",
         "babel",
         "webpack"
