:package: add gulp-plumber and gulp-changed
- make build process more fail-safe with gulp-plumber
- make build process a bit faster with gulp-changed

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Angular starter with ES6",
     "description": "The super simple Angular quickstarter with ES6 (Babel)",
     "author": "Robin Löffel <hi@robinloeffel.ch> (https://robinloeffel.ch)",
-    "licence": "MIT",
+    "license": "MIT",
     "version": "1.0.0",
     "repository": "rbnlffl/angular-babel-seed",
     "keywords": [
@@ -40,8 +40,10 @@
         "del": "^2.2.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
+        "gulp-changed": "^3.1.0",
         "gulp-clean-css": "^3.2.0",
         "gulp-connect": "^5.0.0",
+        "gulp-plumber": "^1.1.0",
         "gulp-sass": "^3.1.0",
         "gulp-sourcemaps": "^2.6.0",
         "open": "^0.0.5",
