--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "gulp-changed": "^3.1.0",
         "gulp-clean-css": "^3.2.0",
         "gulp-connect": "^5.0.0",
+        "gulp-if": "^2.0.2",
         "gulp-plumber": "^1.1.0",
         "gulp-sass": "^3.1.0",
         "gulp-sourcemaps": "^2.6.0",
