--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
     "presets": [
-        "es2015",
+        ["env", {
+            "targets": {
+                "browsers": ["last 2 versions", "not ie < 11", "not ie_mob < 11"]
+            },
+            "modules": false
+        }],
         "angular2"
     ]
 }
