--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "webpack"
     ],
     "scripts": {
-        "start": "gulp --dev",
+        "dev": "gulp --dev",
         "prod": "gulp",
         "dist": "gulp clean && gulp build"
     },
@@ -36,7 +36,7 @@
         "babel-core": "^6.24.1",
         "babel-loader": "^7.0.0",
         "babel-preset-angular2": "^0.0.2",
-        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-env": "^1.4.0",
         "del": "^2.2.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
