:package: update deps, add possibility for multiple entries, switch back to webpack-merge

--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
     "description": "The super simple Angular quickstarter with ES6 (Babel)",
     "author": "Robin Löffel <hi@robinloeffel.ch> (https://robinloeffel.ch)",
     "license": "MIT",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "repository": "rbnlffl/angular-babel-seed",
     "keywords": [
         "angular",
-        "angular2",
-        "angular4",
         "es6",
         "babel",
         "webpack"
@@ -20,36 +18,38 @@
         "dist": "gulp clean && gulp build"
     },
     "dependencies": {
-        "@angular/common": "^4.4.1",
-        "@angular/compiler": "^4.4.1",
-        "@angular/core": "^4.4.1",
-        "@angular/http": "^4.4.1",
-        "@angular/platform-browser": "^4.4.1",
-        "@angular/platform-browser-dynamic": "^4.4.1",
-        "@angular/router": "^4.4.1",
-        "core-js": "^2.5.1",
+        "@angular/common": "^5.1.2",
+        "@angular/compiler": "^5.1.2",
+        "@angular/core": "^5.1.2",
+        "@angular/http": "^5.1.2",
+        "@angular/platform-browser": "^5.1.2",
+        "@angular/platform-browser-dynamic": "^5.1.2",
+        "@angular/router": "^5.1.2",
+        "core-js": "^2.5.3",
         "reflect-metadata": "^0.1.10",
-        "rxjs": "^5.4.3",
-        "zone.js": "^0.8.17"
+        "rxjs": "^5.5.6",
+        "zone.js": "^0.8.19"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-angular2": "^0.0.2",
-        "babel-preset-env": "^1.6.0",
+        "babel-preset-env": "^1.6.1",
         "del": "^3.0.0",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
-        "gulp-changed": "^3.1.0",
-        "gulp-clean-css": "^3.8.0",
+        "gulp-changed": "^3.1.1",
+        "gulp-clean-css": "^3.9.1",
         "gulp-connect": "^5.0.0",
         "gulp-if": "^2.0.2",
         "gulp-plumber": "^1.1.0",
         "gulp-sass": "^3.1.0",
-        "gulp-sourcemaps": "^2.6.1",
+        "gulp-sourcemaps": "^2.6.2",
         "open": "^0.0.5",
-        "run-sequence": "^2.1.0",
-        "webpack": "^3.6.0",
+        "run-sequence": "^2.2.0",
+        "vinyl-named": "^1.1.0",
+        "webpack": "^3.10.0",
+        "webpack-merge": "^4.1.1",
         "webpack-stream": "^4.0.0"
     }
 }
